@@ -17,6 +17,7 @@ Gem::Specification.new do |s|
   s.add_dependency "autoprefixer-rails"
   s.add_dependency "datetime_picker_rails", "~> 0.0.4"
   s.add_dependency "inline_svg", "~> 0.6"
+  s.add_dependency "kaminari", "~> 0.16"
   s.add_dependency "momentjs-rails", ">= 2.9.0"
   s.add_dependency "neat", "~> 1.1"
   s.add_dependency "normalize-rails", "~> 3.0"
