@@ -4,4 +4,5 @@
 @import "form";
 @import "header";
 @import "search";
+@import "pagination";
 @import "table";
