@@ -11,12 +11,9 @@ class Admin::ApplicationController < Administrate::ApplicationController
     # TODO Add authentication logic here.
   end
 
-  def index
-    super
-
-    if @resources.count > 20
-      flash.now[:alert] = "Showing 20 of #{@resources.count} items."
-      @resources = @resources.limit(20)
-    end
-  end
+  # Override this value to specify the number of elements to display at a time
+  # on index pages. Defaults to 20.
+  # def records_per_page
+  #   params[:per_page] || 20
+  # end
 end
